--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -25,6 +25,15 @@ $enable-gradients: true;
 
 // Links
 $link-color: currentcolor;
-$link-decoration: underline;
+$link-decoration: none;
 $link-hover-color: currentcolor;
 $link-hover-decoration: none;
+
+// Buttons
+$btn-padding-y: 20px;
+$btn-padding-x: 57px;
+$btn-border-radius: 30px;
+$btn-font-size: 15px;
+$btn-line-height: 18px;
+$btn-font-weight: 400;
+$btn-font-family: 'Roboto', sans-serif;
