--- a/src/css/front-end-trial.css
+++ b/src/css/front-end-trial.css
@@ -25,9 +25,9 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-accent: #F5F3F5;
+  --bs-accent: #D4B254;
   --bs-on-accent: #fff;
-  --bs-accent-rgb: 245, 243, 245;
+  --bs-accent-rgb: 212, 178, 84;
   --bs-on-accent-rgb: 255, 255, 255;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
@@ -76,9 +76,10 @@ hr:not([size]) {
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
-  margin-bottom: 0.5rem;
-  font-weight: 500;
-  line-height: 1.2; }
+  margin-bottom: 0;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #222; }
 
 h1 {
   font-size: calc(1.03rem + 1.96vw); }
@@ -1510,37 +1511,37 @@ progress {
 
 .btn-accent {
   color: #000;
-  background-color: #F5F3F5;
+  background-color: #D4B254;
   background-image: var(--bs-gradient);
-  border-color: #F5F3F5;
+  border-color: #D4B254;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075); }
   .btn-accent:hover {
     color: #000;
-    background-color: #f7f5f7;
+    background-color: #dabe6e;
     background-image: var(--bs-gradient);
-    border-color: #f6f4f6; }
+    border-color: #d8ba65; }
   .btn-check:focus + .btn-accent, .btn-accent:focus {
     color: #000;
-    background-color: #f7f5f7;
+    background-color: #dabe6e;
     background-image: var(--bs-gradient);
-    border-color: #f6f4f6;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.25rem rgba(208, 207, 208, 0.5); }
+    border-color: #d8ba65;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.25rem rgba(180, 151, 71, 0.5); }
   .btn-check:checked + .btn-accent,
   .btn-check:active + .btn-accent, .btn-accent:active, .btn-accent.active,
   .show > .btn-accent.dropdown-toggle {
     color: #000;
-    background-color: #f7f5f7;
+    background-color: #ddc176;
     background-image: none;
-    border-color: #f6f4f6; }
+    border-color: #d8ba65; }
     .btn-check:checked + .btn-accent:focus,
     .btn-check:active + .btn-accent:focus, .btn-accent:active:focus, .btn-accent.active:focus,
     .show > .btn-accent.dropdown-toggle:focus {
-      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.25rem rgba(208, 207, 208, 0.5); }
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.25rem rgba(180, 151, 71, 0.5); }
   .btn-accent:disabled, .btn-accent.disabled {
     color: #000;
-    background-color: #F5F3F5;
+    background-color: #D4B254;
     background-image: none;
-    border-color: #F5F3F5; }
+    border-color: #D4B254; }
 
 .btn-on-accent {
   color: #000;
@@ -1577,24 +1578,24 @@ progress {
     border-color: #fff; }
 
 .btn-outline-accent {
-  color: #F5F3F5;
-  border-color: #F5F3F5; }
+  color: #D4B254;
+  border-color: #D4B254; }
   .btn-outline-accent:hover {
     color: #000;
-    background-color: #F5F3F5;
-    border-color: #F5F3F5; }
+    background-color: #D4B254;
+    border-color: #D4B254; }
   .btn-check:focus + .btn-outline-accent, .btn-outline-accent:focus {
-    box-shadow: 0 0 0 0.25rem rgba(245, 243, 245, 0.5); }
+    box-shadow: 0 0 0 0.25rem rgba(212, 178, 84, 0.5); }
   .btn-check:checked + .btn-outline-accent,
   .btn-check:active + .btn-outline-accent, .btn-outline-accent:active, .btn-outline-accent.active, .btn-outline-accent.dropdown-toggle.show {
     color: #000;
-    background-color: #F5F3F5;
-    border-color: #F5F3F5; }
+    background-color: #D4B254;
+    border-color: #D4B254; }
     .btn-check:checked + .btn-outline-accent:focus,
     .btn-check:active + .btn-outline-accent:focus, .btn-outline-accent:active:focus, .btn-outline-accent.active:focus, .btn-outline-accent.dropdown-toggle.show:focus {
-      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.25rem rgba(245, 243, 245, 0.5); }
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.25rem rgba(212, 178, 84, 0.5); }
   .btn-outline-accent:disabled, .btn-outline-accent.disabled {
-    color: #F5F3F5;
+    color: #D4B254;
     background-color: transparent; }
 
 .btn-outline-on-accent {
@@ -2061,6 +2062,321 @@ progress {
   .navbar-dark .navbar-text a:focus {
     color: #fff; }
 
+.carousel {
+  position: relative; }
+
+.carousel.pointer-event {
+  touch-action: pan-y; }
+
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow: hidden; }
+  .carousel-inner::after {
+    display: block;
+    clear: both;
+    content: ""; }
+
+.carousel-item {
+  position: relative;
+  display: none;
+  float: left;
+  width: 100%;
+  margin-right: -100%;
+  backface-visibility: hidden;
+  transition: transform 0.6s ease-in-out; }
+  @media (prefers-reduced-motion: reduce) {
+    .carousel-item {
+      transition: none; } }
+
+.carousel-item.active,
+.carousel-item-next,
+.carousel-item-prev {
+  display: block; }
+
+/* rtl:begin:ignore */
+.carousel-item-next:not(.carousel-item-start),
+.active.carousel-item-end {
+  transform: translateX(100%); }
+
+.carousel-item-prev:not(.carousel-item-end),
+.active.carousel-item-start {
+  transform: translateX(-100%); }
+
+/* rtl:end:ignore */
+.carousel-fade .carousel-item {
+  opacity: 0;
+  transition-property: opacity;
+  transform: none; }
+
+.carousel-fade .carousel-item.active,
+.carousel-fade .carousel-item-next.carousel-item-start,
+.carousel-fade .carousel-item-prev.carousel-item-end {
+  z-index: 1;
+  opacity: 1; }
+
+.carousel-fade .active.carousel-item-start,
+.carousel-fade .active.carousel-item-end {
+  z-index: 0;
+  opacity: 0;
+  transition: opacity 0s 0.6s; }
+  @media (prefers-reduced-motion: reduce) {
+    .carousel-fade .active.carousel-item-start,
+    .carousel-fade .active.carousel-item-end {
+      transition: none; } }
+
+.carousel-control-prev,
+.carousel-control-next {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 15%;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  background: none;
+  border: 0;
+  opacity: 0.5;
+  transition: opacity 0.15s ease; }
+  @media (prefers-reduced-motion: reduce) {
+    .carousel-control-prev,
+    .carousel-control-next {
+      transition: none; } }
+  .carousel-control-prev:hover, .carousel-control-prev:focus,
+  .carousel-control-next:hover,
+  .carousel-control-next:focus {
+    color: #fff;
+    text-decoration: none;
+    outline: 0;
+    opacity: 0.9; }
+
+.carousel-control-prev {
+  left: 0;
+  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.001)); }
+
+.carousel-control-next {
+  right: 0;
+  background-image: linear-gradient(270deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.001)); }
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 100% 100%; }
+
+/* rtl:options: {
+  "autoRename": true,
+  "stringMap":[ {
+    "name"    : "prev-next",
+    "search"  : "prev",
+    "replace" : "next"
+  } ]
+} */
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e"); }
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e"); }
+
+.carousel-indicators {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-right: 15%;
+  margin-bottom: 1rem;
+  margin-left: 15%;
+  list-style: none; }
+  .carousel-indicators [data-bs-target] {
+    box-sizing: content-box;
+    flex: 0 1 auto;
+    width: 30px;
+    height: 3px;
+    padding: 0;
+    margin-right: 3px;
+    margin-left: 3px;
+    text-indent: -999px;
+    cursor: pointer;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    opacity: 0.5;
+    transition: opacity 0.6s ease; }
+    @media (prefers-reduced-motion: reduce) {
+      .carousel-indicators [data-bs-target] {
+        transition: none; } }
+  .carousel-indicators .active {
+    opacity: 1; }
+
+.carousel-caption {
+  position: absolute;
+  right: 15%;
+  bottom: 1.25rem;
+  left: 15%;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  color: #fff;
+  text-align: center; }
+
+.carousel-dark .carousel-control-prev-icon,
+.carousel-dark .carousel-control-next-icon {
+  filter: invert(1) grayscale(100); }
+
+.carousel-dark .carousel-indicators [data-bs-target] {
+  background-color: #000; }
+
+.carousel-dark .carousel-caption {
+  color: #000; }
+
+.clearfix::after {
+  display: block;
+  clear: both;
+  content: ""; }
+
+.link-accent {
+  color: #D4B254; }
+  .link-accent:hover, .link-accent:focus {
+    color: #ddc176; }
+
+.link-on-accent {
+  color: #fff; }
+  .link-on-accent:hover, .link-on-accent:focus {
+    color: white; }
+
+.ratio {
+  position: relative;
+  width: 100%; }
+  .ratio::before {
+    display: block;
+    padding-top: var(--bs-aspect-ratio);
+    content: ""; }
+  .ratio > * {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
+.ratio-1x1 {
+  --bs-aspect-ratio: 100%; }
+
+.ratio-4x3 {
+  --bs-aspect-ratio: calc(3 / 4 * 100%); }
+
+.ratio-16x9 {
+  --bs-aspect-ratio: calc(9 / 16 * 100%); }
+
+.ratio-21x9 {
+  --bs-aspect-ratio: calc(9 / 21 * 100%); }
+
+.fixed-top {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030; }
+
+.fixed-bottom {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1030; }
+
+.sticky-top {
+  position: sticky;
+  top: 0;
+  z-index: 1020; }
+
+@media (min-width: 576px) {
+  .sticky-sm-top {
+    position: sticky;
+    top: 0;
+    z-index: 1020; } }
+
+@media (min-width: 768px) {
+  .sticky-md-top {
+    position: sticky;
+    top: 0;
+    z-index: 1020; } }
+
+@media (min-width: 992px) {
+  .sticky-lg-top {
+    position: sticky;
+    top: 0;
+    z-index: 1020; } }
+
+@media (min-width: 1200px) {
+  .sticky-xl-top {
+    position: sticky;
+    top: 0;
+    z-index: 1020; } }
+
+@media (min-width: 1400px) {
+  .sticky-xxl-top {
+    position: sticky;
+    top: 0;
+    z-index: 1020; } }
+
+.hstack {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-self: stretch; }
+
+.vstack {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  align-self: stretch; }
+
+.visually-hidden,
+.visually-hidden-focusable:not(:focus):not(:focus-within) {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important; }
+
+.stretched-link::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  content: ""; }
+
+.text-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+
+.vr {
+  display: inline-block;
+  align-self: stretch;
+  width: 1px;
+  min-height: 1em;
+  background-color: currentColor;
+  opacity: 0.25; }
+
 .align-baseline {
   vertical-align: baseline !important; }
 
@@ -2248,7 +2564,7 @@ progress {
   border-left: 0 !important; }
 
 .border-accent {
-  border-color: #F5F3F5 !important; }
+  border-color: #D4B254 !important; }
 
 .border-on-accent {
   border-color: #fff !important; }
@@ -4740,22 +5056,16 @@ progress {
   .d-print-none {
     display: none !important; } }
 
-.border {
-  border: 1px solid gray; }
-
-h1 {
-  font-size: calc(1.06rem + 3.92vw);
-  margin-bottom: calc(1.06rem + 3.92vw); }
-  @media (min-width: 1200px) {
-    h1 {
-      font-size: 4rem; } }
-  @media (min-width: 1200px) {
-    h1 {
-      margin-bottom: 4rem; } }
-
 .btn {
   text-transform: uppercase;
   letter-spacing: 0.2em; }
+
+.animation-float {
+  transition-duration: .3s;
+  transition-property: transform;
+  transition-timing-function: ease-out; }
+  .animation-float:hover, .animation-float:focus, .animation-float:active {
+    transform: translateY(-8px); }
 
 .header-social {
   padding-left: 0;
@@ -4770,7 +5080,8 @@ h1 {
   border-bottom: 1px solid #707070;
   position: absolute;
   left: 0;
-  right: 0; }
+  right: 0;
+  z-index: 1000; }
   .custom-navbar__social-wrapper {
     width: 192px; }
     @media (max-width: 1399.98px) {
@@ -4789,12 +5100,19 @@ h1 {
     letter-spacing: 0.23076922607421874em;
     display: flex;
     align-items: center;
-    margin-left: auto; }
+    margin-left: auto;
+    border: 1px solid #fff;
+    color: #fff; }
+    .custom-navbar__cta:hover {
+      color: #fff; }
     @media (max-width: 575.98px) {
       .custom-navbar__cta {
         padding: 16px; } }
   .custom-navbar__toggler {
     border-radius: 4px; }
+  @media (max-width: 1399.98px) {
+    .custom-navbar {
+      padding: 16px 0; } }
 
 .custom-nav__primary-item {
   flex: 1 1 0; }
@@ -4817,3 +5135,50 @@ h1 {
 @media (max-width: 1199.98px) {
   .custom-nav {
     margin-top: 30px; } }
+
+.custom-carousel__indicators [data-bs-target] {
+  background-color: #fff;
+  opacity: 1; }
+
+.custom-carousel__indicators .active {
+  background-color: #d4b254; }
+
+.custom-carousel__container {
+  padding: 0 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  text-align: center;
+  max-width: 700px; }
+
+.custom-carousel__image {
+  width: 100%;
+  height: 900px;
+  max-height: 100vh;
+  object-fit: cover; }
+
+.custom-carousel__preheading {
+  font-family: 'Roboto', sans-serif;
+  text-shadow: 0 0 4px black;
+  font-size: 13px;
+  line-height: 15px;
+  letter-spacing: 0.23076922607421874em;
+  font-weight: 400;
+  text-transform: uppercase; }
+
+.custom-carousel__heading {
+  font-size: calc(1.045rem + 2.94vw);
+  letter-spacing: -0.019230770111083983em;
+  line-height: 1.1;
+  color: #fff;
+  text-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
+  margin-bottom: calc(1.01625rem + 1.06167vw); }
+  @media (min-width: 1200px) {
+    .custom-carousel__heading {
+      font-size: 3.25rem; } }
+  @media (min-width: 1200px) {
+    .custom-carousel__heading {
+      margin-bottom: 1.8125rem; } }
