--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -8,8 +8,7 @@ $rfs-base-value: 1rem;
 $rfs-factor: 50;
 
 // Colors
-$secondary: #777;
-$accent: #F5F3F5;
+$accent: #D4B254;
 $on-accent: #fff;
 
 $theme-colors: (
@@ -37,3 +36,8 @@ $btn-font-size: 15px;
 $btn-line-height: 18px;
 $btn-font-weight: 400;
 $btn-font-family: 'Roboto', sans-serif;
+
+// Typography
+$headings-margin-bottom: 0;
+$headings-font-weight: 700;
+$headings-color: #222;
