--- a/src/css/front-end-trial.css
+++ b/src/css/front-end-trial.css
@@ -2062,6 +2062,92 @@ progress {
   .navbar-dark .navbar-text a:focus {
     color: #fff; }
 
+.accordion-button {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 1rem 1.25rem;
+  font-size: 1rem;
+  color: #fff;
+  text-align: left;
+  background-color: #000;
+  border: 0;
+  border-radius: 0;
+  overflow-anchor: none;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease; }
+  @media (prefers-reduced-motion: reduce) {
+    .accordion-button {
+      transition: none; } }
+  .accordion-button:not(.collapsed) {
+    color: #D4B254;
+    background-color: #000;
+    box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.2); }
+    .accordion-button:not(.collapsed)::after {
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23D4B254'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+      transform: rotate(-180deg); }
+  .accordion-button::after {
+    flex-shrink: 0;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-left: auto;
+    content: "";
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-size: 1.25rem;
+    transition: transform 0.2s ease-in-out; }
+    @media (prefers-reduced-motion: reduce) {
+      .accordion-button::after {
+        transition: none; } }
+  .accordion-button:hover {
+    z-index: 2; }
+  .accordion-button:focus {
+    z-index: 3;
+    border-color: #86b7fe;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25); }
+
+.accordion-header {
+  margin-bottom: 0; }
+
+.accordion-item {
+  background-color: #000;
+  border: 1px solid rgba(255, 255, 255, 0.2); }
+  .accordion-item:first-of-type {
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem; }
+    .accordion-item:first-of-type .accordion-button {
+      border-top-left-radius: calc(0.25rem - 1px);
+      border-top-right-radius: calc(0.25rem - 1px); }
+  .accordion-item:not(:first-of-type) {
+    border-top: 0; }
+  .accordion-item:last-of-type {
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem; }
+    .accordion-item:last-of-type .accordion-button.collapsed {
+      border-bottom-right-radius: calc(0.25rem - 1px);
+      border-bottom-left-radius: calc(0.25rem - 1px); }
+    .accordion-item:last-of-type .accordion-collapse {
+      border-bottom-right-radius: 0.25rem;
+      border-bottom-left-radius: 0.25rem; }
+
+.accordion-body {
+  padding: 1rem 1.25rem; }
+
+.accordion-flush .accordion-collapse {
+  border-width: 0; }
+
+.accordion-flush .accordion-item {
+  border-right: 0;
+  border-left: 0;
+  border-radius: 0; }
+  .accordion-flush .accordion-item:first-child {
+    border-top: 0; }
+  .accordion-flush .accordion-item:last-child {
+    border-bottom: 0; }
+  .accordion-flush .accordion-item .accordion-button {
+    border-radius: 0; }
+
 .carousel {
   position: relative; }
 
@@ -5182,13 +5268,10 @@ progress {
   line-height: 1.1;
   color: #fff;
   text-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
-  margin-bottom: calc(1.01625rem + 1.06167vw); }
+  margin-bottom: 29px; }
   @media (min-width: 1200px) {
     .custom-carousel__heading {
       font-size: 3.25rem; } }
-  @media (min-width: 1200px) {
-    .custom-carousel__heading {
-      margin-bottom: 1.8125rem; } }
 
 .custom-about__preheading {
   margin-bottom: 3px;
@@ -5243,7 +5326,7 @@ progress {
       margin-bottom: 2rem; } }
 
 .custom-about__text {
-  font-size: 1rem;
+  font-size: 16px;
   margin-bottom: 27px;
   color: #777;
   font-family: 'Roboto', sans-serif;
@@ -5274,6 +5357,12 @@ progress {
   @media (min-width: 1200px) {
     .custom-testimonials {
       padding-bottom: 7.5rem; } }
+  .custom-testimonials__container {
+    max-width: 600px;
+    margin: 0 auto; }
+    @media (max-width: 991.98px) {
+      .custom-testimonials__container {
+        max-width: 100%; } }
   .custom-testimonials__preheading {
     margin-bottom: 18px;
     font-family: 'Roboto', sans-serif;
@@ -5283,53 +5372,57 @@ progress {
     font-weight: 400;
     text-transform: uppercase;
     color: #d4b254; }
-  @media (min-width: 768px) {
-    .custom-testimonials .container {
-      max-width: 620px; } }
   .custom-testimonials__button {
     margin-top: 36px; }
   .custom-testimonials__heading {
-    font-size: calc(1.02rem + 1.30667vw);
+    font-size: 32px;
     line-height: 1.3125;
-    margin-bottom: calc(1.01rem + 0.65333vw); }
-    @media (min-width: 1200px) {
-      .custom-testimonials__heading {
-        font-size: 2rem; } }
-    @media (min-width: 1200px) {
-      .custom-testimonials__heading {
-        margin-bottom: 1.5rem; } }
-  .custom-testimonials__statement {
-    font-size: calc(1.0025rem + 0.16333vw);
-    line-height: 2;
-    color: #777;
-    margin-bottom: 13px; }
-    @media (min-width: 1200px) {
-      .custom-testimonials__statement {
-        font-size: 1.125rem; } }
-  .custom-testimonials__author {
-    font-family: 'Roboto', sans-serif;
-    font-size: 15px;
-    line-height: 28px;
-    color: #777; }
-  .custom-testimonials .carousel-indicators {
-    position: static; }
-  .custom-testimonials .carousel-control-prev {
-    left: -43%;
-    background-image: none;
-    align-items: start; }
-    @media (max-width: 1199.98px) {
-      .custom-testimonials .carousel-control-prev {
-        left: -90px; } }
-  .custom-testimonials .carousel-control-next {
-    right: -43%;
-    background-image: none;
-    align-items: start; }
-    @media (max-width: 1199.98px) {
-      .custom-testimonials .carousel-control-next {
-        right: -90px; } }
-  .custom-testimonials .carousel-control-prev-icon, .custom-testimonials .carousel-control-next-icon {
-    width: 50px;
-    height: 50px; }
+    margin-bottom: 36px; }
+
+.testimonials-slider__statement {
+  font-size: 18px;
+  line-height: 2;
+  color: #777;
+  margin-bottom: 13px; }
+
+.testimonials-slider__author {
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  line-height: 28px;
+  color: #777; }
+
+.tns-controls {
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  width: calc(100% - 16.66%);
+  margin-right: -50%;
+  transform: translate(-50%, calc(50% - 24px));
+  display: flex;
+  justify-content: space-between;
+  z-index: 0; }
+  .tns-controls button {
+    padding: 0;
+    border: none;
+    display: inline-block; }
+  @media (max-width: 991.98px) {
+    .tns-controls {
+      display: none; } }
+
+.tns-nav {
+  display: none;
+  margin-top: 24px; }
+  .tns-nav button {
+    width: 16px;
+    height: 16px;
+    border: 1px solid #D4B254;
+    margin: 0 8px;
+    border-radius: 50%; }
+    .tns-nav button.tns-nav-active {
+      background-color: #D4B254; }
+  @media (max-width: 991.98px) {
+    .tns-nav {
+      display: block; } }
 
 .custom-gallery {
   padding-top: calc(1.08375rem + 5.47167vw);
@@ -5350,16 +5443,111 @@ progress {
   .custom-gallery__image {
     object-fit: cover; }
   .custom-gallery__heading {
-    font-size: calc(1.02rem + 1.30667vw);
+    font-size: 32px;
     line-height: 1.3125;
-    margin-bottom: calc(1.02625rem + 1.715vw); }
-    @media (min-width: 1200px) {
-      .custom-gallery__heading {
-        font-size: 2rem; } }
-    @media (min-width: 1200px) {
-      .custom-gallery__heading {
-        margin-bottom: 2.3125rem; } }
+    margin-bottom: 37px; }
 
 .custom-footer {
-  height: 495px;
-  background-color: black; }
+  background-color: #000;
+  background-image: url(../images/footer@2x.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 40px 0 60px 0; }
+  .custom-footer__menu-mobile {
+    display: none; }
+  .custom-footer__social-mobile {
+    display: none; }
+    .custom-footer__social-mobile .footer-social {
+      justify-content: center;
+      margin-top: 24px; }
+  .custom-footer__logo-wrapper {
+    text-align: center;
+    position: relative; }
+    .custom-footer__logo-wrapper::before {
+      content: '';
+      display: block;
+      position: absolute;
+      height: 1px;
+      background-color: rgba(255, 255, 255, 0.2);
+      width: calc(50% - 60px);
+      left: 0;
+      top: 16px; }
+    .custom-footer__logo-wrapper::after {
+      content: '';
+      display: block;
+      position: absolute;
+      height: 1px;
+      background-color: rgba(255, 255, 255, 0.2);
+      width: calc(50% - 60px);
+      right: 0;
+      top: 16px; }
+  .custom-footer__logo {
+    display: inline-block;
+    margin-bottom: 35px; }
+  .custom-footer__copyright {
+    font-family: 'Roboto', sans-serif;
+    font-size: 13px;
+    line-height: 2;
+    color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+    margin-bottom: 60px;
+    margin-top: 38px; }
+  .custom-footer__heading {
+    color: #fff;
+    font-size: 24px;
+    line-height: 1.75;
+    margin-bottom: 24px;
+    font-weight: 700; }
+    @media (max-width: 767.98px) {
+      .custom-footer__heading {
+        margin-bottom: 12px; } }
+    @media (max-width: 767.98px) {
+      .custom-footer__heading_two {
+        margin-top: 24px; } }
+    @media (max-width: 767.98px) {
+      .custom-footer__heading_three {
+        margin-top: 24px; } }
+    .custom-footer__heading_four {
+      margin-bottom: 34px; }
+      @media (max-width: 767.98px) {
+        .custom-footer__heading_four {
+          margin: 24px 0; } }
+  .custom-footer__list {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+  .custom-footer__bottom-divider {
+    margin: 0;
+    background-color: rgba(255, 255, 255, 0.2); }
+  .custom-footer__link {
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 13px;
+    line-height: 30px;
+    letter-spacing: 0.23076922607421874em;
+    font-weight: 400;
+    display: inline-block;
+    font-family: 'Roboto', sans-serif; }
+    .custom-footer__link:hover {
+      color: white; }
+  @media (max-width: 767.98px) {
+    .custom-footer {
+      background-image: none; }
+      .custom-footer__menu-desktop {
+        display: none; }
+      .custom-footer__menu-mobile, .custom-footer__social-mobile {
+        display: block; } }
+
+.footer-social {
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  margin-bottom: 0; }
+  .footer-social__item {
+    margin-right: 15px; }
+
+.accordion-button {
+  color: #fff;
+  font-size: 24px;
+  line-height: 1.75;
+  font-weight: 700; }
