--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -45,3 +45,10 @@ $headings-color: #222;
 // Carousels
 $carousel-control-prev-icon-bg: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='70.711' height='70.711' viewBox='0 0 70.711 70.711'> <path id='Combined_Shape-3' data-name='Combined Shape-3' d='M0,49V1A1,1,0,0,1,1,0H49a1,1,0,0,1,0,2H2V49a1,1,0,0,1-2,0Z' transform='translate(0 35.355) rotate(-45)' fill='#d4b254'/></svg>");
 $carousel-control-next-icon-bg: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='70.711' height='70.711' viewBox='0 0 70.711 70.711'> <path id='Combined_Shape-4' data-name='Combined Shape-4' d='M0,49V1A1,1,0,0,0-1,0H-49a1,1,0,0,0-1,1,1,1,0,0,0,1,1H-2V49a1,1,0,0,0,1,1A1,1,0,0,0,0,49Z' transform='translate(70.711 35.355) rotate(45)' fill='#d4b254'/></svg>");
+
+// Accordion
+$accordion-bg: #000;
+$accordion-border-color: rgba(255,255,255,0.2);
+$accordion-color: #fff;
+$accordion-button-active-bg: #000;
+$accordion-button-active-color: $accent;
