--- a/src/css/front-end-trial.css
+++ b/src/css/front-end-trial.css
@@ -5162,12 +5162,22 @@ progress {
     margin: 0 4px; }
 
 .custom-navbar {
-  padding: 30px 0;
-  border-bottom: 1px solid #707070;
   position: absolute;
   left: 0;
   right: 0;
-  z-index: 1000; }
+  z-index: 1000;
+  transition: background-color 400ms ease-in-out; }
+  .custom-navbar_bg {
+    background-color: rgba(0, 0, 0, 0.95); }
+  .custom-navbar__container {
+    padding: 30px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center; }
+    @media (max-width: 1399.98px) {
+      .custom-navbar__container {
+        padding: 16px 0; } }
   .custom-navbar__social-wrapper {
     width: 192px; }
     @media (max-width: 1399.98px) {
@@ -5196,9 +5206,6 @@ progress {
         padding: 16px; } }
   .custom-navbar__toggler {
     border-radius: 4px; }
-  @media (max-width: 1399.98px) {
-    .custom-navbar {
-      padding: 16px 0; } }
 
 .custom-nav__primary-item {
   flex: 1 1 0; }
@@ -5216,16 +5223,11 @@ progress {
   letter-spacing: 0.23076922607421874em;
   color: #fff;
   font-weight: 400;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  transition: border .3s ease-in-out; }
   .custom-nav__secondary-link:hover {
     color: #fff;
     border-bottom: 1px solid #fff; }
-
-@media (max-width: 1199.98px) {
-  .custom-nav {
-    margin-top: 30px;
-    background-color: #222;
-    border-radius: 4px; } }
 
 .custom-carousel__indicators [data-bs-target] {
   background-color: #fff;
@@ -5544,7 +5546,11 @@ progress {
   display: flex;
   margin-bottom: 0; }
   .footer-social__item {
-    margin-right: 15px; }
+    margin-right: 15px;
+    transition: transform .3s ease-in-out; }
+    .footer-social__item:hover, .footer-social__item:active {
+      display: inline-block;
+      transform: scale(1.1); }
 
 .accordion-button {
   color: #fff;
