--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -135,8 +135,17 @@
     border: 1px solid #fff;
     color: #fff;
 
+    img {
+      transition: filter 0.15s ease-in-out;
+    }
+
     &:hover {
-      color: #fff;
+      background-color: $accent;
+      color: $on-accent;
+
+      img {
+        filter: invert(1);
+      }
     }
 
     @include media-breakpoint-down(sm) {
