--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -393,6 +393,33 @@
   text-align: center;
 
   &__button {
+    overflow: hidden;
+    position: relative;
+    border: none;
+    padding: 0;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: -75%;
+      z-index: 2;
+      display: block;
+      content: '';
+      width: 50%;
+      height: 100%;
+      background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .3) 100%);
+      background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .3) 100%);
+      -webkit-transform: skewX(-25deg);
+      transform: skewX(-25deg);
+    }
+
+    &:hover::before {
+      -webkit-animation: shine .75s;
+      animation: shine .75s;
+    }
+  }
+
+  &__cta {
     margin-top: 20px;
   }
 
@@ -590,4 +617,18 @@
   font-size: 24px;
   line-height: 1.75;
   font-weight: 700;
+}
+
+/* Keyframes */
+
+@-webkit-keyframes shine {
+  100% {
+    left: 125%;
+  }
+}
+
+@keyframes shine {
+  100% {
+    left: 125%;
+  }
 }
