--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -462,6 +462,7 @@
 
 .custom-footer {
   background-color: #000;
+  background-image: url(../images/footer@2x.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   padding: 40px 0 60px 0;
